# madr

./: Dockerfile  README.md  alembic_postgresql.ini  entrypoint.sh  pyproject.toml
madr/: app.py  models.py  schemas.py  security.py  settings.py
madr/routers/: auth.py  conta.py  livros.py  romancistas.py
migrations/versions/: 2354b12307be_criando_tabela_de_usuarios.py  bd568a6ccc12_create_table_books.py  c18df1a0ad89_criando_tabela_de_romancistas.py
migrations_postgresql/: env.py
migrations_postgresql/versions/: efcb36d2a3b7_introduzindo_postgrsql.py
tests/: conftest.py  test_app.py  test_auth.py  test_livro.py  test_romancistas.py  test_security.py
